# soosh-native

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  run_clang_tidy.sh
cmake/: AddTestExecutable.cmake  SetTargetDefaults.cmake  dependencies.cmake
src/: CMakeLists.txt  main.cc
src/client/app/: CMakeLists.txt  main.cc
src/client/lib/: CMakeLists.txt  client.cc  client.h  client_session.cc  client_session.h  client_ui.cc  client_ui.h  henlo.cc  henlo.h  session.cc  session.h
src/server/app/: CMakeLists.txt  main.cc
src/server/lib/: CMakeLists.txt  game_message_handler.cc  game_message_handler.h  server.cc  server.h  server_session.cc  server_session.h  session.cc  session.h
src/server/lib/game_logic/: game_session.cc  game_session.h  scoring.cc  scoring.h  soosh_session.cc  soosh_session.h
src/server/lib/game_logic/models/: card.h  player.h
src/server/lib/handlers/: game_message_handler.cc  game_message_handler.h  message_handler.h  soosh_message_handler.cc  soosh_message_handler.h
src/server/lib/models/: card.h  player.h
src/server/lib/networking/: client_session.cc  client_session.h  server.cc  server.h  server_session.cc  server_session.h
src/server/lib/utils/: logger.cc  logger.h
src/shared/: CMakeLists.txt
src/shared/proto/: CMakeLists.txt  soosh.proto
src/shared/proto_utils/: CMakeLists.txt  proto_enum_conversions.cc  proto_enum_conversions.h  proto_streams.cc  proto_streams.h  protobuf_stream_utils.h
tests/: CMakeLists.txt  test_henlo.cc
tests/client/: CMakeLists.txt  test_client.cc
tests/server/: CMakeLists.txt  test_game_session.cc  test_server.cc
tests/server/game_logic/: test_join_leave.cc  test_play_logic.cc  test_scoring.cc
